--- a/.openshift/action_hooks/build
+++ b/.openshift/action_hooks/build
@@ -1,12 +1,4 @@
 #!/bin/bash
-SERVER_PROPERTIES=server.properties
-CRAFTBUKKIT_SERVER_JAR=craftbukkit-dev.jar
 
-set -x 
-
-cd $OPENSHIFT_DATA_DIR
-
-if [ ! -e "$CRAFTBUKKIT_SERVER_JAR" ]; then
-	wget "http://getspigot.org/spigot18/spigot_server.jar" -O $CRAFTBUKKIT_SERVER_JAR
-fi
-
+wget "https://hub.spigotmc.org/jenkins/job/BuildTools/lastSuccessfulBuild/artifact/target/BuildTools.jar"
+java -jar BuildTools.jar --rev latest
