use openshift data dir

--- a/.openshift/action_hooks/build
+++ b/.openshift/action_hooks/build
@@ -1,4 +1,5 @@
 #!/bin/bash
+JAR_FILE=$OPENSHIFT_DATA_DIR/BuildTools.jar
 
-wget "https://hub.spigotmc.org/jenkins/job/BuildTools/lastSuccessfulBuild/artifact/target/BuildTools.jar"
-java -jar BuildTools.jar --rev latest
+wget "https://hub.spigotmc.org/jenkins/job/BuildTools/lastSuccessfulBuild/artifact/target/BuildTools.jar" -o $JAR_FILE
+java -jar $JAR_FILE --rev latest
